--- a/booklist-ios/Base.lproj/Main.storyboard
+++ b/booklist-ios/Base.lproj/Main.storyboard
@@ -64,14 +64,36 @@
         <!--Item 1-->
         <scene sceneID="vbP-mV-c74">
             <objects>
-                <viewController id="uMp-QT-asZ" sceneMemberID="viewController">
+                <viewController id="uMp-QT-asZ" customClass="BooksViewController" customModule="booklist_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VuZ-1p-fNy">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LMU-3j-5JM">
+                                <rect key="frame" x="77" y="196" width="183" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q6J-bJ-Xqy">
+                                <rect key="frame" x="77" y="268" width="167" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Set label"/>
+                                <connections>
+                                    <action selector="onDumbClick:" destination="uMp-QT-asZ" eventType="touchUpInside" id="GH2-eb-eft"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Aqd-lJ-J0x"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="tO0-SR-lej"/>
+                    <connections>
+                        <outlet property="dumbButton" destination="q6J-bJ-Xqy" id="FzR-dl-mji"/>
+                        <outlet property="topLabel" destination="LMU-3j-5JM" id="MQB-uz-QAj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MVy-zO-pwX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
