--- a/booklist-ios/Base.lproj/Main.storyboard
+++ b/booklist-ios/Base.lproj/Main.storyboard
@@ -68,7 +68,7 @@
             </objects>
             <point key="canvasLocation" x="3057.971014492754" y="473.4375"/>
         </scene>
-        <!--Item 1-->
+        <!--Books View Controller-->
         <scene sceneID="vbP-mV-c74">
             <objects>
                 <viewController id="uMp-QT-asZ" customClass="BooksViewController" customModule="booklist_ios" customModuleProvider="target" sceneMemberID="viewController">
@@ -101,7 +101,7 @@
                         <viewLayoutGuide key="safeArea" id="Aqd-lJ-J0x"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="tO0-SR-lej"/>
+                    <navigationItem key="navigationItem" id="o1w-vF-WB8"/>
                     <connections>
                         <outlet property="booksTableView" destination="dHJ-wg-Egc" id="Bf4-sC-CNJ"/>
                         <outlet property="dumbButton" destination="q6J-bJ-Xqy" id="FzR-dl-mji"/>
@@ -110,7 +110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MVy-zO-pwX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3057.971014492754" y="-213.61607142857142"/>
+            <point key="canvasLocation" x="3968.115942028986" y="-213.61607142857142"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="S5w-i9-zCW">
@@ -122,7 +122,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="uMp-QT-asZ" kind="relationship" relationship="viewControllers" id="Q6C-YK-97h"/>
+                        <segue destination="UN1-lx-g5q" kind="relationship" relationship="viewControllers" id="Q6C-YK-97h"/>
                         <segue destination="rWW-Js-gt8" kind="relationship" relationship="viewControllers" id="He9-5o-tMv"/>
                     </connections>
                 </tabBarController>
@@ -147,6 +147,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Obt-rO-43d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="18.840579710144929" y="83.705357142857139"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="wzk-hc-QFz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UN1-lx-g5q" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 1" id="tO0-SR-lej"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="T1o-ux-CgH">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="uMp-QT-asZ" kind="relationship" relationship="rootViewController" id="XYz-HA-eOP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dke-vj-ERp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3057.971014492754" y="-213.61607142857142"/>
         </scene>
     </scenes>
     <resources>
