--- a/booklist-ios/Books/BookDisplayTableCell.xib
+++ b/booklist-ios/Books/BookDisplayTableCell.xib
@@ -16,35 +16,32 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9KU-Jl-HpZ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="EjZ-n6-AaV">
+                        <rect key="frame" x="0.0" y="0.0" width="60" height="44"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TTM-kH-N3W">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="23.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1w-JJ-Yab">
-                                <rect key="frame" x="0.0" y="23.5" width="320" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KZ5-RY-nbn" customClass="ScaledImageView" customModule="booklist_ios" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="60" height="44"/>
+                            </imageView>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="DGK-Kq-Ij4"/>
+                            <constraint firstItem="KZ5-RY-nbn" firstAttribute="top" secondItem="EjZ-n6-AaV" secondAttribute="top" id="I6E-9f-iLZ"/>
+                            <constraint firstItem="KZ5-RY-nbn" firstAttribute="leading" secondItem="EjZ-n6-AaV" secondAttribute="leading" id="Tnl-1h-va6"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="9KU-Jl-HpZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="2hv-gU-Y1M"/>
-                    <constraint firstItem="9KU-Jl-HpZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="jO0-gQ-E5t"/>
-                    <constraint firstAttribute="trailing" secondItem="9KU-Jl-HpZ" secondAttribute="trailing" id="m4g-sE-kKQ"/>
-                    <constraint firstAttribute="bottom" secondItem="9KU-Jl-HpZ" secondAttribute="bottom" id="o79-7L-tNF"/>
+                    <constraint firstItem="EjZ-n6-AaV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="5bR-Wi-URq"/>
+                    <constraint firstItem="EjZ-n6-AaV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="6jo-OH-9ac"/>
+                    <constraint firstItem="EjZ-n6-AaV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="DDf-O7-Pvk"/>
+                    <constraint firstAttribute="bottom" secondItem="EjZ-n6-AaV" secondAttribute="bottom" id="b5Q-Ll-5Pn"/>
+                    <constraint firstItem="EjZ-n6-AaV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="v8B-Sg-OyA"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="junkLabel" destination="r1w-JJ-Yab" id="cG5-k8-7Ys"/>
-                <outlet property="titleLabel" destination="TTM-kH-N3W" id="mzo-fE-YBv"/>
+                <outlet property="coverContainer" destination="EjZ-n6-AaV" id="fym-zo-hJ4"/>
+                <outlet property="coverImageView" destination="KZ5-RY-nbn" id="e1z-cf-JD8"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="71.651785714285708"/>
         </tableViewCell>
