--- a/booklist-ios/Books/BookDisplayTableCell.xib
+++ b/booklist-ios/Books/BookDisplayTableCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -24,6 +25,7 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mLA-5c-l5b">
                                         <rect key="frame" x="0.0" y="0.0" width="60" height="44"/>
+                                        <color key="backgroundColor" systemColor="systemMintColor"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -67,9 +69,16 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="coverContainer" destination="nnf-jv-oX8" id="ta1-MH-F2w"/>
                 <outlet property="coverImageView" destination="mLA-5c-l5b" id="hw5-fA-2JN"/>
+                <outlet property="titleLabel" destination="Wk0-ja-pvF" id="SS3-A9-Urf"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="71.651785714285708"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemMintColor">
+            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
